<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/infoTv"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/infoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/usernameEt"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTv"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="@+id/usernameEt"
        app:layout_constraintStart_toStartOf="@+id/usernameEt"
        app:layout_constraintTop_toBottomOf="@+id/usernameEt"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="@+id/emailEt"
        app:layout_constraintStart_toStartOf="@+id/emailEt"
        app:layout_constraintTop_toBottomOf="@+id/emailEt"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="@+id/phoneEt"
        app:layout_constraintStart_toStartOf="@+id/phoneEt"
        app:layout_constraintTop_toBottomOf="@+id/phoneEt"
        app:layout_constraintVertical_bias="0.2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="@+id/passwordEt"
        app:layout_constraintStart_toStartOf="@+id/passwordEt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt"
        app:layout_constraintVertical_bias="0.2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordEt"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEt"
        app:layout_constraintVertical_bias="0.13" />


</androidx.constraintlayout.widget.ConstraintLayout>